# polite-bot

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  BACKLOG.md  DESIGN.md  VISION.md
docs/launch/: devto.md
scripts/: build-wasm.sh
site/: app.js  index.html  styles.css
src/: analyzer.rs  fixer.rs  json.rs  lib.rs  robots.rs
tests/: analyzer_test.rs  fixer_test.rs  robots_test.rs  robustness_test.rs
