[package]
name = "politebot-core"
version = "0.1.0"
edition = "2021"
authors = ["Charlie Krug"]
description = "Politeness scoring engine for web scrapers: robots.txt parsing + static analysis, compiled to WebAssembly"
license = "MIT"
repository = "https://github.com/ctkrug/polite-bot"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"

[profile.release]
opt-level = "s"
lto = true
